# MSFS2020-Screenshot-Coordinates

./: Cargo.toml  README.md
.cargo/: config.toml
docs/: index.html
src/: main.rs
